Final comprehensive layout and content fixes for THETA slides

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -189,7 +189,7 @@
 
             <!-- 2. The Logic -->
             <section>
-                <h2>0. 戦略方針：大切なのは「正しくバズる」こと</h2>
+                <h2 style="font-size: 1.4em !important; white-space: nowrap;">0. 戦略方針：大切なのは「正しくバズる」こと</h2>
                 <div class="cols">
                     <div class="col-6">
                         <div class="box">
@@ -239,7 +239,7 @@
             <section>
                 <h2>2. 3ヶ月成長シミュレーション</h2>
                 <p>フェーズごとに明確なKPIを設定し、段階的にEC売上へ繋げます。</p>
-                <table style="margin-top:20px;">
+                <table style="margin-top:20px; border: 2px solid #aaa;">
                     <tr>
                         <th style="width:15%">Phase</th>
                         <th style="width:25%">Status</th>
@@ -250,19 +250,19 @@
                         <td><strong>Month 1</strong></td>
                         <td><strong>認知・テスト</strong><br>(Seed)</td>
                         <td>・3つの戦略軸（A/B/C）を投稿し、初速反応が良い「勝ち筋」を特定。<br>・「広島」タグでの検索露出確保。</td>
-                        <td>フォロワー: 1,000人<br>平均再生: 3,000回</td>
+                        <td>フォロワー: 100〜300人<br>平均再生: 1,000回</td>
                     </tr>
                     <tr>
                         <td><strong>Month 2</strong></td>
                         <td><strong>ファン化</strong><br>(Fan Base)</td>
                         <td>・勝ち筋にリソースを集中。<br>・コメント返信率100%でコミュニティ化。<br>・LIVE配信のテスト。</td>
-                        <td>フォロワー: 3,000人<br><strong>EC遷移率: 1.5%</strong></td>
+                        <td>フォロワー: 500人<br><strong>EC遷移率: 1.5%</strong></td>
                     </tr>
                     <tr>
                         <td><strong>Month 3</strong></td>
                         <td><strong>拡散・売上</strong><br>(Sales)</td>
                         <td>・<strong>TikTok Shop連携（動画内直販）</strong>。<br>・ヒット動画への広告ブースト。</td>
-                        <td>月間リーチ: 50万imp<br><strong>売上貢献: 30万円〜</strong></td>
+                        <td>フォロワー: 1,000人<br><strong>目標売上: 30万円〜</strong></td>
                     </tr>
                 </table>
                 <div class="slide-number">4 / 9</div>
@@ -287,7 +287,7 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <h3>Risk Management (守り)</h3>
+                        <h3 style="font-size: 1.0em !important;">Risk Management (守り)</h3>
                         <div class="box">
                             <ul>
                                 <li><strong>コメントフィルター</strong>:<br>「高い」「ぼったくり」等のネガティブワードを自動ブロック。</li>
@@ -354,8 +354,9 @@
                         </ul>
                     </div>
                 </div>
-                <div class="box" style="margin-top:10px; text-align:center; padding:15px;">
-                    <p style="font-size:1.0em !important; line-height: 1.8 !important;">
+                <div class="box"
+                    style="margin-top:10px; text-align:center; padding:15px; width: 85%; margin-left: auto; margin-right: auto;">
+                    <p style="font-size:0.9em !important; line-height: 1.7 !important;">
                         <strong>Message:</strong><br>
                         「機材」にお金をかける時代は終わりました。<br>
                         浮いた予算は、広告費や商品の仕入れに回し、<br>
@@ -372,44 +373,54 @@
                     <tr style="background:#333; color:#fff;">
                         <th style="width:20%; color:#fff;">Plan</th>
                         <th style="width:40%; color:#fff;">Content (Deliverables)</th>
-                        <th style="width:20%; color:#fff;">Price (Monthly)</th>
-                        <th style="width:20%; color:#fff;">Recommend</th>
+                        <th style="width:20%; color:#fff;">Price</th>
+                        <th style="width:20%; color:#fff;">Note</th>
                     </tr>
                     <tr>
                         <td><strong>Standard</strong><br>(標準プラン)</td>
-                        <td>
+                        <td style="font-size: 0.9em;">
                             <ul>
                                 <li><strong>月8本投稿 (週2回)</strong></li>
                                 <li>企画・台本作成</li>
                                 <li>シネマティック編集</li>
-                                <li>運用レポート・定例MTG</li>
+                                <li>定例MTG・レポート</li>
                             </ul>
+                            <div
+                                style="font-size: 0.8em; color: #555; margin-top: 5px; border-top: 1px dashed #ccc; padding-top:5px;">
+                                [内訳目安]<br>
+                                企画・構成: ¥50,000<br>
+                                制作(8本): ¥80,000<br>
+                                分析・管理: ¥20,000
+                            </div>
                         </td>
-                        <td><strong>¥200,000</strong><br><span style="font-size:0.6em">(税抜)</span></td>
-                        <td><strong>◎ 推奨</strong><br><span style="font-size:0.6em">半年で成果を出すならこれ</span></td>
+                        <td><strong>¥150,000</strong><br><span style="font-size:0.7em">(税抜・要相談)</span></td>
+                        <!-- Updated price -->
+                        <td><strong>◎ 推奨</strong><br><span style="font-size:0.6em">もっとも費用対効果が高い構成です</span></td>
                     </tr>
                     <tr>
                         <td><strong>Light</strong><br>(お試しプラン)</td>
-                        <td>
+                        <td style="font-size: 0.9em;">
                             <ul>
                                 <li>月4本投稿 (週1回)</li>
                                 <li>企画・編集のみ</li>
                                 <li>簡易レポート</li>
                             </ul>
                         </td>
-                        <td><strong>¥120,000</strong><br><span style="font-size:0.6em">(税抜)</span></td>
+                        <td><strong>¥100,000</strong><br><span style="font-size:0.7em">(税抜)</span></td>
                         <td>△<br><span style="font-size:0.6em">まずは試したい方向け</span></td>
                     </tr>
                 </table>
                 <p style="margin-top:10px; font-size:0.7em !important; color:#666;">※契約期間:
-                    3ヶ月〜（初期のアカウント設計・学習期間が必要なため）<br>※撮影は貴社ご協力（iPhone）または、私が訪問時にまとめて実施（交通費別途）のハイブリッド形式です。</p>
+                    3ヶ月〜（初期のアカウント設計・学習期間が必要なため）<br>※撮影は貴社ご協力（iPhone）または、私が訪問時にまとめて実施（交通費込み）のハイブリッド形式です。</p>
+                <!-- Updated transportation -->
                 <div class="slide-number">8 / 9</div>
             </section>
 
             <!-- 9. Conclusion -->
             <section>
                 <div style="margin-top: 20%; text-align: center;">
-                    <h1 style="border:none; font-size: 2.5em !important; margin-bottom: 40px !important;">
+                    <h1 style="border:none; font-size: 2.0em !important; margin-bottom: 40px !important;">
+                        <!-- Reduced font size 2.5em -> 2.0em -->
                         流行を追うのではなく、<br>「質」で圧倒する。</h1>
                     <p>THETA θの服が持つ本来の力を、デジタルの力で最大限に引き出します。</p>
                 </div>
