Reduce fonts and margins to ensure content fits within A4 frame

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -39,40 +39,36 @@
         }
 
         .reveal h1 {
-            font-size: 2.2em !important;
-            margin: 10px 0 30px 0 !important;
+            font-size: 2.0em !important;
+            margin: 10px 0 20px 0 !important;
             color: #333;
         }
 
         .reveal h2 {
-            font-size: 1.6em !important;
-            margin-bottom: 25px !important;
+            font-size: 1.5em !important;
+            margin-bottom: 20px !important;
             border-left: 8px solid #555;
-            /* Softer border color */
             padding-left: 15px;
             color: #222;
         }
 
         .reveal h3 {
-            font-size: 1.2em !important;
+            font-size: 1.1em !important;
             margin-top: 5px !important;
-            margin-bottom: 10px !important;
+            margin-bottom: 8px !important;
             color: #333;
             border-bottom: 1px dashed #ccc;
-            /* Add separator for sections */
             padding-bottom: 5px;
             display: inline-block;
-            /* Wrap to text width */
         }
 
-        /* Adjusted for fit: 19px */
+        /* Adjusted for fit: Reduced to 17px */
         .reveal p,
         .reveal li {
-            font-size: 19px !important;
-            line-height: 1.6 !important;
-            /* Slightly more breathing room */
+            font-size: 17px !important;
+            /* Reduced from 19px */
+            line-height: 1.5 !important;
             color: #333;
-            /* Softer black */
         }
 
         .reveal ul {
@@ -80,24 +76,23 @@
         }
 
         .reveal li {
-            margin-bottom: 8px !important;
+            margin-bottom: 6px !important;
         }
 
         /* Compact Layout components */
         .box {
-            padding: 20px;
-            margin: 10px 0;
+            padding: 15px;
+            /* Reduced from 20px */
+            margin: 8px 0;
             background: #fafafa;
-            /* Lighter background */
             border: 1px solid #ddd;
             border-radius: 12px;
-            /* Rounded corners to match Maru Gothic */
         }
 
         .cols {
             display: flex;
-            gap: 25px;
-            /* Increase gap slightly */
+            gap: 20px;
+            /* Reduced gap */
         }
 
         .col-6 {
@@ -111,23 +106,21 @@
         /* Helper to force smaller text in tight boxes */
         .dense-text p,
         .dense-text li {
-            font-size: 18px !important;
-            /* Slight adjust */
+            font-size: 16px !important;
+            /* Reduced from 18px */
         }
 
         /* Table adjustments */
         table {
-            font-size: 18px !important;
+            font-size: 16px !important;
+            /* Reduced from 18px */
             width: 100%;
             border-collapse: separate;
-            /* For rounding */
             border-spacing: 0;
             border: 1px solid #ccc;
             border-radius: 8px;
-            /* Rounded table */
             overflow: hidden;
             border-bottom: none;
-            /* Handle via last-child */
         }
 
         table tr:last-child td {
@@ -137,7 +130,8 @@
         th {
             background: #eee;
             color: #222;
-            padding: 10px;
+            padding: 8px;
+            /* Reduced padding */
             font-weight: bold;
             border-bottom: 1px solid #ccc;
             border-right: 1px solid #ccc;
@@ -148,13 +142,13 @@
         }
 
         td {
-            padding: 16px;
-            /* Increased from 10px for more breathability */
+            padding: 10px;
+            /* Reduced from 16px */
             border-bottom: 1px solid #ccc;
             border-right: 1px solid #ccc;
             vertical-align: top;
-            line-height: 1.8 !important;
-            /* Increase line spacing within cells */
+            line-height: 1.5 !important;
+            /* Tightened line height */
         }
 
         td:last-child {
