Fix overflow on S2/S7 and clutter on S3

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -220,17 +220,20 @@
                 <h2 style="font-size: 1.4em !important; white-space: nowrap;">0. 戦略方針：大切なのは「正しくバズる」こと</h2>
                 <div class="cols">
                     <div class="col-6">
-                        <div class="box">
-                            <h3>① 視聴維持率 (Retention)</h3>
-                            <p><strong>「いいね」より「離脱されない」が正義。</strong></p>
-                            <p>ASMR（衣擦れの音）やマクロ撮影（質感）は、脳に直接的な快感を与えます。言語情報を介さず、無意識に「最後まで見てしまう」状態を作ります。</p>
+                        <div class="box" style="padding: 12px !important;"> <!-- Reduced padding -->
+                            <h3 style="font-size: 1.1em !important; margin: 5px 0 8px 0 !important;">① 視聴維持率 (Retention)
+                            </h3>
+                            <p style="font-size: 16px !important;"><strong>「いいね」より「離脱されない」が正義。</strong></p>
+                            <p style="font-size: 16px !important; margin-bottom: 0;">
+                                ASMR（衣擦れの音）やマクロ撮影（質感）は、脳に直接的な快感を与えます。言語情報を介さず、無意識に「最後まで見てしまう」状態を作ります。</p>
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="box">
-                            <h3>② 保存数 (Saves)</h3>
-                            <p><strong>エンタメより「憧れの蓄積」へ。</strong></p>
-                            <p>説明しすぎない「余白」のある動画は、「いつかこうなりたい」という没入感を生み、保存されます。<br>この「蓄積」が、<strong>TikTok
+                        <div class="box" style="padding: 12px !important;"> <!-- Reduced padding -->
+                            <h3 style="font-size: 1.1em !important; margin: 5px 0 8px 0 !important;">② 保存数 (Saves)</h3>
+                            <p style="font-size: 16px !important;"><strong>エンタメより「憧れの蓄積」へ。</strong></p>
+                            <p style="font-size: 16px !important; margin-bottom: 0;">
+                                説明しすぎない「余白」のある動画は、「いつかこうなりたい」という没入感を生み、保存されます。<br>この「蓄積」が、<strong>TikTok
                                     Shopでの即時購入</strong>への最短ルートとなります。</p>
                         </div>
                     </div>
@@ -244,19 +247,25 @@
                 <p>小手先の流行ではなく、<strong>購買心理学</strong>に基づいた3つのアプローチ。</p>
 
                 <div style="margin-top:10px;">
-                    <div style="margin-bottom: 10px;">
-                        <h3>A. Visual Haptics（視覚的触感の転送）</h3>
-                        <p>スマホのガラス越しに「手触り」を錯覚させます。肉眼レベルのマクロ撮影で「繊維の起毛」を可視化し、ASMRを同期。脳内でクロスモーダル（感覚相互作用）を起こし、<strong>「触れた」と錯覚させます。</strong>
+                    <div style="margin-bottom: 8px;"> <!-- Reduced margin -->
+                        <h3 style="font-size: 1.0em !important; margin-bottom: 5px !important;">A. Visual
+                            Haptics（視覚的触感の転送）</h3> <!-- Smaller font -->
+                        <p style="margin-top:0;">
+                            スマホのガラス越しに「手触り」を錯覚させます。肉眼レベルのマクロ撮影で「繊維の起毛」を可視化し、ASMRを同期。脳内でクロスモーダル（感覚相互作用）を起こし、<strong>「触れた」と錯覚させます。</strong>
                         </p>
                     </div>
-                    <div style="margin-bottom: 10px;">
-                        <h3>B. POV Immersion（主観的没入体験）</h3>
-                        <p>モデルを「他人」として見せるのではなく、カメラを目線位置に置くことで<strong>「自分が着ている視界」</strong>を再現します。ミラーニューロンを刺激し、試着の疑似体験を完了させます。
+                    <div style="margin-bottom: 8px;"> <!-- Reduced margin -->
+                        <h3 style="font-size: 1.0em !important; margin-bottom: 5px !important;">B. POV
+                            Immersion（主観的没入体験）</h3> <!-- Smaller font -->
+                        <p style="margin-top:0;">
+                            モデルを「他人」として見せるのではなく、カメラを目線位置に置くことで<strong>「自分が着ている視界」</strong>を再現します。ミラーニューロンを刺激し、試着の疑似体験を完了させます。
                         </p>
                     </div>
-                    <div style="margin-bottom: 10px;">
-                        <h3>C. Logic Anatomy（価格の論理的解剖）</h3>
-                        <p>「なんとなく高い」を排除します。「なぜ襟がこの角度なのか」といった<strong>設計思想（Logic）</strong>をテロップで淡々と解説。感性ではなく論理で納得させ、価格への抵抗感を消滅させます。
+                    <div style="margin-bottom: 8px;"> <!-- Reduced margin -->
+                        <h3 style="font-size: 1.0em !important; margin-bottom: 5px !important;">C. Logic
+                            Anatomy（価格の論理的解剖）</h3> <!-- Smaller font -->
+                        <p style="margin-top:0;">
+                            「なんとなく高い」を排除します。「なぜ襟がこの角度なのか」といった<strong>設計思想（Logic）</strong>をテロップで淡々と解説。感性ではなく論理で納得させ、価格への抵抗感を消滅させます。
                         </p>
                     </div>
                 </div>
@@ -364,8 +373,8 @@
                 <h2>5. なぜ、この価格で実現できるのか？</h2>
                 <div class="cols dense-text">
                     <div class="col-6">
-                        <h3>一般的な制作会社 (相場: 50万〜)</h3>
-                        <ul style="color:#666;">
+                        <h3 style="font-size: 1.1em !important;">一般的な制作会社 (相場: 50万〜)</h3>
+                        <ul style="color:#666; font-size: 0.9em !important;">
                             <li>機材費・減価償却費</li>
                             <li>スタジオ使用料</li>
                             <li>ディレクター、カメラマン、編集者（3人分の人件費）</li>
@@ -373,8 +382,8 @@
                         </ul>
                     </div>
                     <div class="col-6">
-                        <h3>本プロジェクト (ご提案)</h3>
-                        <ul style="font-weight:bold;">
+                        <h3 style="font-size: 1.1em !important;">本プロジェクト (ご提案)</h3>
+                        <ul style="font-weight:bold; font-size: 0.9em !important;">
                             <li>機材費 0円 <span style="font-weight:normal; font-size:0.8em;">(iPhone + 自然光)</span></li>
                             <li>スタジオ費 0円 <span style="font-weight:normal; font-size:0.8em;">(店舗活用)</span></li>
                             <li>人件費 最小限 <span style="font-weight:normal; font-size:0.8em;">(撮影・編集を一気通貫)</span></li>
@@ -383,8 +392,10 @@
                     </div>
                 </div>
                 <div class="box"
-                    style="margin-top:10px; text-align:center; padding:15px; width: 85%; margin-left: auto; margin-right: auto;">
-                    <p style="font-size:0.9em !important; line-height: 1.7 !important;">
+                    style="margin-top:10px; text-align:center; padding:10px !important; width: 85%; margin-left: auto; margin-right: auto;">
+                    <!-- Reduced padding -->
+                    <p style="font-size:0.85em !important; line-height: 1.6 !important; margin: 0;">
+                        <!-- Smaller font, tighter line-height, remove margin -->
                         <strong>Message:</strong><br>
                         「機材」にお金をかける時代は終わりました。<br>
                         浮いた予算は、広告費や商品の仕入れに回し、<br>
