Fix Slide 7 header layout and move/resize PDF button

--- a/theta_slide/index.html
+++ b/theta_slide/index.html
@@ -440,7 +440,7 @@
                 <h2>5. なぜ、この価格で実現できるのか？</h2>
                 <div class="cols dense-text">
                     <div class="col-6">
-                        <h3 style="font-size: 1.1em !important;">一般的な制作会社 (相場: 50万〜)</h3>
+                        <h3 style="font-size: 0.95em !important; white-space: nowrap;">一般的な制作会社 (相場: 50万〜)</h3>
                         <ul style="color:#666; font-size: 0.9em !important;">
                             <li>機材費・減価償却費</li>
                             <li>スタジオ使用料</li>
@@ -449,7 +449,7 @@
                         </ul>
                     </div>
                     <div class="col-6">
-                        <h3 style="font-size: 1.1em !important;">本プロジェクト (ご提案)</h3>
+                        <h3 style="font-size: 0.95em !important; white-space: nowrap;">本プロジェクト (ご提案)</h3>
                         <ul style="font-weight:bold; font-size: 0.9em !important;">
                             <li>機材費 0円 <span style="font-weight:normal; font-size:0.8em;">(iPhone + 自然光)</span></li>
                             <li>スタジオ費 0円 <span style="font-weight:normal; font-size:0.8em;">(店舗活用)</span></li>
@@ -540,8 +540,8 @@
 
     <!-- PDF Download Button -->
     <div class="pdf-btn" onclick="downloadAllPDF()"
-        style="position: fixed; bottom: 20px; right: 20px; z-index: 1000; background: #333; color: #fff; padding: 10px 20px; border-radius: 5px; cursor: pointer; font-size: 14px; box-shadow: 0 2px 5px rgba(0,0,0,0.3);">
-        Download Full PDF
+        style="position: fixed; bottom: 10px; left: 10px; z-index: 1000; background: #333; color: #fff; padding: 6px 12px; border-radius: 4px; cursor: pointer; font-size: 11px; box-shadow: 0 1px 3px rgba(0,0,0,0.2); opacity: 0.8;">
+        Download PDF
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
